Moved over to rollup

--- a/src/app.html
+++ b/src/app.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Origami - Zen</title>
+    <link rel="stylesheet" href="/admin/app.css">
 </head>
 
 <body>
     <zen-app></zen-app>
     <zen-icon-set></zen-icon-set>
+    <script src="/admin/app.js"></script>
 </body>
 
 </html>
