--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Origami - Zen</title>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/2.0.2/webcomponents-loader.js"></script> -->
     <link rel="stylesheet" href="/admin/app.css">
     <script src="/admin/app.js"></script>
 
